# gpt-j-ru

./: Cargo.toml  README.md
src/: bin.rs  lib.rs
