[package]
name = "gptj"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "gptj-cli"
path = "src/bin.rs"
test = false
bench = false

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version= "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
